# PolydotTransformations

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: main.cpp
src/controllers/: MainController.cpp  MainController.h
src/enums/: MeshType.h
src/models/: ColladaFormatImporter.h  GeometryPrimitives.cpp  GeometryPrimitives.h  LinesMeshModel.cpp  LinesMeshModel.h  MeshListModel.cpp  MeshListModel.h  PolydotGeometryModel.cpp  PolydotGeometryModel.h
src/qml/: LinesMesh.qml  Main.qml  MeshList.qml  PointWithName.qml  PolydotObject.qml  TextWithSlider.qml  TorusMesh.qml
src/utils/: GaussJordanElimination.cpp  GaussJordanElimination.h  MathUtils.cpp  MathUtils.h  MetaUtils.cpp  MetaUtils.h
src/utils/import/: ColladaFormatImporter.cpp  ColladaFormatImporter.h
